Fix vertical alignment of rows in dashboard

--- a/src/app/dashboard/integrations.component.scss
+++ b/src/app/dashboard/integrations.component.scss
@@ -233,10 +233,13 @@
           padding: 0;
         }
 
-        .times-of-use {
+        .uses {
           line-height: 28px;
           padding: 0;
-
+          
+          p {
+            margin: 0;
+          }
         }
       }
     }
